Upgrade to JUnit5 and Java 11. closes #4